Browser Themes: always paint an opaque BG color behind toolbar images

for both the active tab and the toolbar. This matches the bookmarks
bar, i.e. PaintBackgroundAttachedMode.

Bug: 866974
Change-Id: I3a86d2330bf09903f74359e433a4165e3e4d3e8e
Reviewed-on: https://chromium-review.googlesource.com/1171216
Commit-Queue: Evan Stade <estade@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582350}
Former-commit-id: eeddc1fcb0a7897d31eadfddfbf621ce9e9bdaf2