chrome/browser/ui/views/toolbar/toolbar_view.cc
@@ -601,6 +601,11 @@ void ToolbarView::OnPaintBackground(gfx::Canvas* canvas) {
 
   const ui::ThemeProvider* tp = GetThemeProvider();
 
+  // Always fill the toolbar with its bg color first in case the image is
+  // transparent.
+  canvas->FillRect(GetLocalBounds(),
+                   tp->GetColor(ThemeProperties::COLOR_TOOLBAR));
+
   if (tp->HasCustomImage(IDR_THEME_TOOLBAR)) {
     const int x_offset =
         GetMirroredX() + browser_view_->GetMirroredX() +
@@ -610,9 +615,6 @@ void ToolbarView::OnPaintBackground(gfx::Canvas* canvas) {
                          GetLayoutConstant(TABSTRIP_TOOLBAR_OVERLAP);
     canvas->TileImageInt(*tp->GetImageSkiaNamed(IDR_THEME_TOOLBAR), x_offset,
                          y_offset, 0, 0, width(), height());
-  } else {
-    canvas->FillRect(GetLocalBounds(),
-                     tp->GetColor(ThemeProperties::COLOR_TOOLBAR));
   }
 
   // Toolbar/content separator.
